<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="match_parent"
        android:layout_height="143dp"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/select_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:text="@string/select_profile_pic" />

    <EditText
        android:id="@+id/name"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="Name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="295dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textEmailAddress"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="77dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="313dp"
        android:layout_height="39dp"
        android:layout_marginBottom="10dp"
        android:text="@string/password_requirements"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="144dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="301dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="189dp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        tools:layout_editor_absoluteX="15dp"
        tools:layout_editor_absoluteY="245dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        android:layout_marginTop="10dp"

        <Button
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="register"
            tools:layout_editor_absoluteX="68dp"
            tools:layout_editor_absoluteY="341dp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="cancel"
            tools:layout_editor_absoluteX="229dp"
            tools:layout_editor_absoluteY="341dp" />
    </LinearLayout>

</LinearLayout>