...

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register New  Account</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="password_requirements"> Password min req: 8 char, 1 numeral, 1 uppercase </string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_Browse">Browse</string>
    <string name="title_Main_Feed">Main Feed</string>
    <string name="title_Commented">Previously Commented</string>
    <string name="title_Account">Account</string>
    <string name="action_logout">logout</string>
    <string name="action_add_topic">add topic</string>
    <string name="title_activity_topic_cateogry">TopicCateogryActivity</string>
    <string name="title_activity_random">RandomActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="action_edit_account">Edit Account</string>
    <string name="title_activity_edit_account">EditAccountActivity</string>
...
