...

    <item
        android:id="@+id/navigation_Commented"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/title_Commented" />
    <item
        android:id="@+id/navigation_Account"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_Account" />

</menu>

